# fscratch

./: .gitignore  CMakeLists.txt  README.md  prj.conf  west.yml
src/: main.c
